--- a/style.css
+++ b/style.css
@@ -24,6 +24,11 @@ h1{
   justify-content: space-evenly;
 }
 
+span {
+  font-size: 15px;
+  padding-bottom: 2px;
+}
+
 p {
   padding: 2px 2px 2px 2px;
   text-align: center;
